Fix grid-template-rows on small devices

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,10 @@
     display: none;
   }
 
+  #left {
+    grid-template-rows: none;
+  }
+
   #users {
     flex-direction: row;
     overflow: scroll;
